# rose-vm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  addon.cc  api.hpp  binding.gyp  cartridge.c  cartridge.cpp  cartridge.h  cartridge.hpp  config.h  config.hpp  editor.cpp  editor.hpp  editorCartridge.cpp  editor_cartridge.cpp  editor_cartridge.hpp  editor_runtime.cpp  editor_runtime.hpp  fun.h  fun.raw  game_runtime.cpp  game_runtime.hpp  index.d.ts  index.js  keycodes.js  main.c  main.cpp  package-lock.json  package.json  runtime.cpp  runtime.hpp  runtime_api.c  runtime_api.h  runtime_base.c  runtime_base.h  runtime_editor.cpp  runtime_editor.hpp  (+15 more)
cmake/modules/: FindLuaJIT.cmake  FindV8.cmake
include/: cartridge.h  config.h  types.h
include/rt/: api.h  game.h  lua_api.h  rt.h  rt_base.h  rt_game.h
include/rt/api/: api_graphics.h  api_input.h  api_memory.h
include/rt/fs/: fs.h  fs_base.h  fs_cartridge.h  fs_common.h
include/rt/js/: js.h  js_base.h  js_common.h  js_graphics.h  js_input.h  js_memory.h
include/rt/lua_api/: lua_base.h  lua_graphics.h  lua_input.h  lua_memory.h
include/sys/: sys_key_conversion.h  sys_sdl2.h
src/: config.h  main.c  main.cpp  types.h
src/js/: js.cc  js.h  js_common.cc  js_common.h  js_graphics.cc  js_input.cc  js_memory.cc  js_sys.cc  js_sys.h
src/rt/: api.h  api_graphics.cpp  api_graphics.h  api_input.cpp  api_input.h  api_memory.cpp  api_memory.h  common.cpp  common.fwd.h  common.h  config.h  desktop_player.cpp  desktop_player.h  editor.cpp  editor.fwd.h  editor.h  enums.h  file.fwd.h  file.h  fs.cpp  fs.fwd.h  fs.h  game.cpp  game.fwd.h  game.h  js.cpp  js.fwd.h  js.h  js_common.cpp  js_common.h  js_graphics.cpp  js_graphics.fwd.h  js_graphics.h  js_input.cpp  js_input.h  js_memory.cpp  js_memory.h  js_sys.cpp  lua_api.c  rose.h  (+7 more)
src/rt/api/: api_graphics.c  api_graphics.cpp  api_graphics.h  api_input.c  api_input.cpp  api_input.h  api_memory.c  api_memory.cpp  api_memory.h
src/rt/fs/: fs.cpp  fs.h  fs_base.c  fs_base.cpp  fs_cartridge.c
src/rt/js/: js.cpp  js.h  js_base.cpp  js_common.cpp  js_common.h  js_graphics.cpp  js_graphics.h  js_input.cpp  js_input.h  js_memory.cpp  js_memory.h
src/rt/lua_api/: lua_base.c  lua_graphics.c  lua_input.c  lua_memory.c
src/sys/: sys_key_conversion.cpp  sys_key_conversion.h  sys_sdl2.c  sys_sdl2.cc  sys_sdl2.cpp  sys_sdl2.h
src/vm/: api_graphics.cc  api_input.cc  api_memory.cc  common.cc  common.h  desktop_player.cc  desktop_player.h  enums.h  rose.h  vm.cc  vm.h
